--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -39,11 +39,10 @@ jobs:
         with:
             SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
             ARGS: "-rlgoDzvc -i"
-            SOURCE: "dist/"
+            SOURCE: "var/www/zapbit/crypto/"
             REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
             REMOTE_USER: ${{ secrets.REMOTE_USER }}
             TARGET: ${{ secrets.REMOTE_TARGET }}
-            EXCLUDE: "/dist/, /node_modules/"
             SCRIPT_BEFORE: |
               whoami
               ls -al
