--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -39,10 +39,10 @@ jobs:
         with:
             SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
             ARGS: "-rlgoDzvc -i"
-            SOURCE: "var/www/zapbit/crypto/"
+            SOURCE: "/"
             REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
             REMOTE_USER: ${{ secrets.REMOTE_USER }}
-            TARGET: ${{ secrets.REMOTE_TARGET }}
+            TARGET: "/var/www/zapbit/"
             SCRIPT_BEFORE: |
               whoami
               ls -al
